--- a/portfolio.html
+++ b/portfolio.html
@@ -41,12 +41,20 @@
         </nav>
         <ul class="auth-nav list">
           <li class="auth-nav-item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="link-icon" width="16" height="12">
+                <use href=".//images/symbol-defs.svg#icon-tel"></use>
+              </svg>
+              @devstudio.com</a
             >
           </li>
           <li class="auth-nav-item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">
+              <svg class="link-icon" width="10" height="16">
+                <use href=".//images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -76,114 +84,132 @@
         <div class="container">
           <ul class="portfolio list">
             <li class="portfolio-item">
-              <img
-                src="./images/img-11.jpg"
-                alt="Ноут"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card">
-                <h2 class="portfolio-title">Технокряк</h2>
-                <p class="portfilio-text">Веб-сайт</p>
-              </div>
+              <a class="link-portfolio">
+                <img
+                  src="./images/img-11.jpg"
+                  alt="Ноут"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card">
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="portfilio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img-12.jpg"
-                alt="Баскетболісти"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card">
-                <h2 class="portfolio-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="portfilio-text">Дизайн</p>
-              </div>
+              <a class="link-portfolio">
+                <img
+                  src="./images/img-12.jpg"
+                  alt="Баскетболісти"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card">
+                  <h2 class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfilio-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img-13.jpg"
-                alt="Лого ресторану"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card">
-                <h2 class="portfolio-title">Ресторан Seafood</h2>
-                <p class="portfilio-text">Додаток</p>
-              </div>
+              <a class="link-portfolio">
+                <img
+                  src="./images/img-13.jpg"
+                  alt="Лого ресторану"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card">
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfilio-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img-14.jpg"
-                alt="Навушники"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card">
-                <h2 class="portfolio-title">Проєкт Prime</h2>
-                <p class="portfilio-text">Маркетинг</p>
-              </div>
+              <a class="link-portfolio">
+                <img
+                  src="./images/img-14.jpg"
+                  alt="Навушники"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card">
+                  <h2 class="portfolio-title">Проєкт Prime</h2>
+                  <p class="portfilio-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img-15.jpg"
-                alt="Дві коробки"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card">
-                <h2 class="portfolio-title">Проєкт Boxes</h2>
-                <p class="portfilio-text">Додаток</p>
-              </div>
+              <a class="link-portfolio">
+                <img
+                  src="./images/img-15.jpg"
+                  alt="Дві коробки"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card">
+                  <h2 class="portfolio-title">Проєкт Boxes</h2>
+                  <p class="portfilio-text">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <a class="link-portfolio">
+              <li class="portfolio-item">
+                <img
+                  src="./images/img-16.jpg"
+                  alt="Монітор"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card">
+                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                  <p class="portfilio-text">Веб-сайт</p>
+                </div>
+            </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img-16.jpg"
-                alt="Монітор"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card">
-                <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                <p class="portfilio-text">Веб-сайт</p>
-              </div>
+              <a class="link-portfolio">
+                <img
+                  src="./images/img-17.jpg"
+                  alt="Журнал"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card">
+                  <h2 class="portfolio-title">Видання Limited Edition</h2>
+                  <p class="portfilio-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img-17.jpg"
-                alt="Журнал"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card">
-                <h2 class="portfolio-title">Видання Limited Edition</h2>
-                <p class="portfilio-text">Дизайн</p>
-              </div>
+              <a class="link-portfolio">
+                <img
+                  src="./images/img-18.jpg"
+                  alt="Бірка"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card">
+                  <h2 class="portfolio-title">Проєкт LAB</h2>
+                  <p class="portfilio-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img-18.jpg"
-                alt="Бірка"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card">
-                <h2 class="portfolio-title">Проєкт LAB</h2>
-                <p class="portfilio-text">Маркетинг</p>
-              </div>
-            </li>
-            <li class="portfolio-item">
-              <img
-                src="./images/img-19.jpg"
-                alt="Праця за ноутом"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card">
-                <h2 class="portfolio-title">Growing Business</h2>
-                <p class="portfilio-text">Додаток</p>
-              </div>
+              <a class="link-portfolio">
+                <img
+                  src="./images/img-19.jpg"
+                  alt="Праця за ноутом"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card">
+                  <h2 class="portfolio-title">Growing Business</h2>
+                  <p class="portfilio-text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -192,32 +218,79 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo-black link">
-          <span class="logo-second">Web</span>Studio</a
-        >
-        <address class="footer-contact">
-          <ul class="list">
-            <li class="footer-item">
-              <a
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="link footer-address"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="footer-contact link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="footer-contact link"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <div class="footer-box">
+          <div class="foorer-info">
+            <a href="./index.html" class="logo-black link">
+              <span class="logo-second">Web</span>Studio</a
+            >
+            <address class="footer-contact">
+              <ul class="list">
+                <li class="footer-item">
+                  <a
+                    href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    class="link footer-address"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="footer-item">
+                  <a
+                    href="mailto:info@devstudio.com"
+                    class="footer-contact link"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="footer-item">
+                  <a href="tel:+380961111111" class="footer-contact link"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer-social">
+            <h2 class="title-social">ПРИЄДНУЙТЕСЬ</h2>
+            <ul class="footer-soc-list list">
+              <li class="footer-soc-item">
+                <a class="footer-soc-link" href="#" target="_blank">
+                  <svg class="footer-icon" width="20" height="20">
+                    <use
+                      href="./images/symbol-defs.svg#icon-instagram-footer"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a class="footer-soc-link" href="#" target="_blank">
+                  <svg class="footer-icon" width="20" height="20">
+                    <use
+                      href="./images/symbol-defs.svg#icon-twitter-footer"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a class="footer-soc-link" href="#" target="_blank">
+                  <svg class="footer-icon" width="20" height="20">
+                    <use
+                      href="./images/symbol-defs.svg#icon-facebook-footer"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a class="footer-soc-link" href="#" target="_blank">
+                  <svg class="footer-icon" width="20" height="20">
+                    <use
+                      href="./images/symbol-defs.svg#icon-linkedin-footer"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
